[KIECLOUD-696] - Unable to upgrade BA operator from version 7.13.1-2 to version 7.13.2-1
Signed-off-by: Your Name <fspolti@redhat.com>

--- a/deploy/olm-catalog/test/7.13.2-1/manifests/businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/test/7.13.2-1/manifests/businessautomation-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry-proxy.engineering.redhat.com/rh-osbs/rhpam-7-rhpam-rhel8-operator:7.13.2
-    createdAt: "2022-11-08 16:28:18"
+    createdAt: "2023-02-28 15:38:26"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat
       Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
@@ -20,7 +20,7 @@ metadata:
     operator-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: businessautomation-operator.7.13.2-1-dev-bmmwvl9b8j
+  name: businessautomation-operator.7.13.2-1-dev-j2mzqzdztv
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -215,9 +215,9 @@ spec:
                 - name: RELATED_IMAGE_MYSQL_PROXY_IMAGE_7.13.1
                   value: registry.redhat.io/rhscl/mysql-80-rhel7:latest
                 - name: RELATED_IMAGE_POSTGRESQL_PROXY_IMAGE_7.13.1
-                  value: registry.redhat.io/rhscl/postgresql-10-rhel7:latest
+                  value: registry.redhat.io/rhscl/postgresql-12-rhel7:latest
                 - name: RELATED_IMAGE_DATAGRID_IMAGE_7.13.1
-                  value: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift:1.6
+                  value: registry.redhat.io/datagrid/datagrid-8-rhel8:1.1
                 - name: RELATED_IMAGE_BROKER_IMAGE_7.13.1
                   value: registry.redhat.io/amq7/amq-broker:7.8
                 - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_LATEST
@@ -409,7 +409,7 @@ spec:
   - operator
   labels:
     alm-owner-businessautomation: businessautomation-operator
-    operated-by: businessautomation-operator.7.13.2-1-dev-bmmwvl9b8j
+    operated-by: businessautomation-operator.7.13.2-1-dev-j2mzqzdztv
   links:
   - name: Product Page
     url: https://access.redhat.com/products/red-hat-process-automation-manager
@@ -421,9 +421,9 @@ spec:
   maturity: test
   provider:
     name: Red Hat
-  replaces: businessautomation-operator.7.13.1-1
+  replaces: businessautomation-operator.7.13.1-2
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
-      operated-by: businessautomation-operator.7.13.2-1-dev-bmmwvl9b8j
-  version: 7.13.2-1+bmmwvl9b8j
+      operated-by: businessautomation-operator.7.13.2-1-dev-j2mzqzdztv
+  version: 7.13.2-1+j2mzqzdztv
