--- a/deploy/olm-catalog/dev/7.13.2-2/manifests/businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/dev/7.13.2-2/manifests/businessautomation-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "false"
     containerImage: quay.io/kiegroup/kie-cloud-operator:7.13.2
-    createdAt: "2023-03-15 09:20:16"
+    createdAt: "2023-03-24 15:10:50"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat
       Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
@@ -20,7 +20,7 @@ metadata:
     operator-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: businessautomation-operator.7.13.2-2-dev-rvmlzpjf6b
+  name: businessautomation-operator.7.13.2-2-dev-kpfn9xhzzf
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -187,7 +187,7 @@ spec:
                 - name: RELATED_IMAGE_PAM_DASHBUILDER_IMAGE_7.13.2
                   value: registry.redhat.io/rhpam-7/rhpam-dashbuilder-rhel8:7.13.2
                 - name: RELATED_IMAGE_OSE_CLI_IMAGE_7.13.2
-                  value: registry.redhat.io/openshift4/ose-cli:v4.11
+                  value: registry.redhat.io/openshift4/ose-cli:v4.12
                 - name: RELATED_IMAGE_MYSQL_PROXY_IMAGE_7.13.2
                   value: registry.redhat.io/rhscl/mysql-80-rhel7:latest
                 - name: RELATED_IMAGE_POSTGRESQL_PROXY_IMAGE_7.13.2
@@ -211,25 +211,19 @@ spec:
                 - name: RELATED_IMAGE_PAM_DASHBUILDER_IMAGE_7.13.1
                   value: registry.redhat.io/rhpam-7/rhpam-dashbuilder-rhel8:7.13.1
                 - name: RELATED_IMAGE_OSE_CLI_IMAGE_7.13.1
-                  value: registry.redhat.io/openshift4/ose-cli:v4.11
+                  value: registry.redhat.io/openshift4/ose-cli:v4.12
                 - name: RELATED_IMAGE_MYSQL_PROXY_IMAGE_7.13.1
                   value: registry.redhat.io/rhscl/mysql-80-rhel7:latest
                 - name: RELATED_IMAGE_POSTGRESQL_PROXY_IMAGE_7.13.1
                   value: registry.redhat.io/rhscl/postgresql-12-rhel7:latest
                 - name: RELATED_IMAGE_DATAGRID_IMAGE_7.13.1
-                  value: registry.redhat.io/datagrid/datagrid-8-rhel8:1.1
+                  value: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift:1.6
                 - name: RELATED_IMAGE_BROKER_IMAGE_7.13.1
                   value: registry.redhat.io/amq7/amq-broker:7.8
                 - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_LATEST
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:latest
-                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.9
-                  value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.9
-                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.8
-                  value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.8
-                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.7
-                  value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.7
-                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.6
-                  value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.6
+                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.12
+                  value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.12
                 - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.11
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.11
                 - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.10
@@ -409,7 +403,7 @@ spec:
   - operator
   labels:
     alm-owner-businessautomation: businessautomation-operator
-    operated-by: businessautomation-operator.7.13.2-2-dev-rvmlzpjf6b
+    operated-by: businessautomation-operator.7.13.2-2-dev-kpfn9xhzzf
   links:
   - name: Product Page
     url: https://access.redhat.com/products/red-hat-process-automation-manager
@@ -425,5 +419,5 @@ spec:
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
-      operated-by: businessautomation-operator.7.13.2-2-dev-rvmlzpjf6b
-  version: 7.13.2-2+rvmlzpjf6b
+      operated-by: businessautomation-operator.7.13.2-2-dev-kpfn9xhzzf
+  version: 7.13.2-2+kpfn9xhzzf
