--- a/deploy/olm-catalog/test/8.0.3-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/test/8.0.3-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry-proxy.engineering.redhat.com/rh-osbs/bamoe-8-rhpam-rhel8-operator:8.0.3
-    createdAt: "2023-03-24 15:21:51"
+    createdAt: "2023-03-29 13:42:28"
     description: Deploys and manages IBM Business Automation Manager Open Editions
       environment.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
@@ -18,7 +18,7 @@ metadata:
     operator-bamoe-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: bamoe-businessautomation-operator.8.0.3-1-dev-tg5c4ktt4c
+  name: bamoe-businessautomation-operator.8.0.3-1-dev-2dwtxbjsml
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -399,7 +399,7 @@ spec:
   - operator
   labels:
     alm-owner-bamoe-businessautomation: bamoe-businessautomation-operator
-    operated-by: bamoe-businessautomation-operator.8.0.3-1-dev-tg5c4ktt4c
+    operated-by: bamoe-businessautomation-operator.8.0.3-1-dev-2dwtxbjsml
   links:
   - name: Product Page
     url: https://ibm.com
@@ -411,9 +411,9 @@ spec:
   maturity: test
   provider:
     name: IBM
-  replaces: bamoe-businessautomation-operator.8.0.2-1
+  replaces: bamoe-businessautomation-operator.8.0.2-3
   selector:
     matchLabels:
       alm-owner-bamoe-businessautomation: bamoe-businessautomation-operator
-      operated-by: bamoe-businessautomation-operator.8.0.3-1-dev-tg5c4ktt4c
-  version: 8.0.3-1+tg5c4ktt4c
+      operated-by: bamoe-businessautomation-operator.8.0.3-1-dev-2dwtxbjsml
+  version: 8.0.3-1+2dwtxbjsml
