--- a/rhpam-config/8.0.3/dbs/servers/external.yaml
+++ b/rhpam-config/8.0.3/dbs/servers/external.yaml
@@ -37,8 +37,13 @@ servers:
                       value: "[[.Database.ExternalConfig.NonXA]]"
                     - name: RHPAM_URL
                       value: "[[.Database.ExternalConfig.JdbcURL]]"
+                      #[[if or (contains .Database.ExternalConfig.Driver "postgresql") (contains .Database.ExternalConfig.Driver "mariadb") ]]
+                    - name: RHPAM_XA_CONNECTION_PROPERTY_Url
+                      value: "[[.Database.ExternalConfig.JdbcURL]]"
+                      #[[ else ]]
                     - name: RHPAM_XA_CONNECTION_PROPERTY_URL
                       value: "[[.Database.ExternalConfig.JdbcURL]]"
+                      #[[ end ]]
                     - name: RHPAM_MIN_POOL_SIZE
                       value: "[[.Database.ExternalConfig.MinPoolSize]]"
                     - name: RHPAM_MAX_POOL_SIZE
