--- a/rhpam-config/7.13.4/dbs/servers/external.yaml
+++ b/rhpam-config/7.13.4/dbs/servers/external.yaml
@@ -35,10 +35,17 @@ servers:
                       value: "[[.Database.ExternalConfig.Password]]"
                     - name: RHPAM_NONXA
                       value: "[[.Database.ExternalConfig.NonXA]]"
+                    #[[if .Database.ExternalConfig.JdbcURL]]
                     - name: RHPAM_URL
                       value: "[[.Database.ExternalConfig.JdbcURL]]"
+                      #[[if or (contains .Database.ExternalConfig.Driver "postgresql") (contains .Database.ExternalConfig.Driver "mariadb") ]]
+                    - name: RHPAM_XA_CONNECTION_PROPERTY_Url
+                      value: "[[.Database.ExternalConfig.JdbcURL]]"
+                      #[[ else ]]
                     - name: RHPAM_XA_CONNECTION_PROPERTY_URL
                       value: "[[.Database.ExternalConfig.JdbcURL]]"
+                      #[[ end ]]
+                    #[[ end ]]
                     - name: RHPAM_MIN_POOL_SIZE
                       value: "[[.Database.ExternalConfig.MinPoolSize]]"
                     - name: RHPAM_MAX_POOL_SIZE
