--- a/deploy/olm-catalog/test/7.13.4-1/manifests/businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/test/7.13.4-1/manifests/businessautomation-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry-proxy.engineering.redhat.com/rh-osbs/rhpam-7-rhpam-rhel8-operator:7.13.4
-    createdAt: "2023-08-11 11:11:50"
+    createdAt: "2023-08-11 12:09:14"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat
       Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
@@ -20,7 +20,7 @@ metadata:
     operator-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: businessautomation-operator.7.13.4-1-dev-nf729k4z9v
+  name: businessautomation-operator.7.13.4-1-dev-wwtq59qtff
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -403,7 +403,7 @@ spec:
   - operator
   labels:
     alm-owner-businessautomation: businessautomation-operator
-    operated-by: businessautomation-operator.7.13.4-1-dev-nf729k4z9v
+    operated-by: businessautomation-operator.7.13.4-1-dev-wwtq59qtff
   links:
   - name: Product Page
     url: https://access.redhat.com/products/red-hat-process-automation-manager
@@ -419,5 +419,5 @@ spec:
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
-      operated-by: businessautomation-operator.7.13.4-1-dev-nf729k4z9v
-  version: 7.13.4-1+nf729k4z9v
+      operated-by: businessautomation-operator.7.13.4-1-dev-wwtq59qtff
+  version: 7.13.4-1+wwtq59qtff
