--- a/deploy/olm-catalog/test/8.0.4-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/test/8.0.4-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry-proxy.engineering.redhat.com/rh-osbs/bamoe-8-rhpam-rhel8-operator:8.0.4
-    createdAt: "2023-08-11 11:19:06"
+    createdAt: "2023-08-11 14:08:44"
     description: Deploys and manages IBM Business Automation Manager Open Editions
       environment.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
@@ -18,7 +18,7 @@ metadata:
     operator-bamoe-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: bamoe-businessautomation-operator.8.0.4-1-dev-4qzslcl5np
+  name: bamoe-businessautomation-operator.8.0.4-1-dev-dj79sh8k2f
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -399,7 +399,7 @@ spec:
   - operator
   labels:
     alm-owner-bamoe-businessautomation: bamoe-businessautomation-operator
-    operated-by: bamoe-businessautomation-operator.8.0.4-1-dev-4qzslcl5np
+    operated-by: bamoe-businessautomation-operator.8.0.4-1-dev-dj79sh8k2f
   links:
   - name: Product Page
     url: https://ibm.com
@@ -415,5 +415,5 @@ spec:
   selector:
     matchLabels:
       alm-owner-bamoe-businessautomation: bamoe-businessautomation-operator
-      operated-by: bamoe-businessautomation-operator.8.0.4-1-dev-4qzslcl5np
-  version: 8.0.4-1+4qzslcl5np
+      operated-by: bamoe-businessautomation-operator.8.0.4-1-dev-dj79sh8k2f
+  version: 8.0.4-1+dj79sh8k2f
