--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@ updates:
     schedule:
       interval: "daily"
     # Raise pull requests for version updates
-    target-branch: "release-v7.13.x-blue-next"
+    target-branch: "release-v7.13.x-blue"
     # Labels on pull requests for version updates only
     labels:
       - "infosec"
