--- a/deploy/olm-catalog/prod/8.0.4-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/prod/8.0.4-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
@@ -7,10 +7,12 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry.stage.redhat.io/ibm-bamoe/bamoe-rhel8-operator:8.0.4
-    createdAt: "2023-08-11 14:08:44"
+    createdAt: "2023-09-07 12:16:03"
     description: Deploys and manages IBM Business Automation Manager Open Editions
       environment.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
+    operators.openshift.io/valid-subscription: '["IBM Business Automation Manager
+      Open Edition"]'
     repository: https://github.com/kiegroup/kie-cloud-operator
     support: https://www.ibm.com/mysupport
     tectonic-visibility: ocs
