[RHPAM-4904] Add required annotations for Infrastructure Feature Test

--- a/deploy/olm-catalog/dev/7.13.5-1/manifests/businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/dev/7.13.5-1/manifests/businessautomation-operator.clusterserviceversion.yaml
@@ -7,9 +7,16 @@ metadata:
     categories: Integration & Delivery
     certified: "false"
     containerImage: quay.io/kiegroup/kie-cloud-operator:7.13.5
-    createdAt: "2024-02-29 11:37:35"
+    createdAt: "2024-03-18 11:07:47"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat
       Decision Manager environments.
+    features.operators.openshift.io/disconnected: "false"
+    features.operators.openshift.io/fips-compliant: "false"
+    features.operators.openshift.io/proxy-aware: "false"
+    features.operators.openshift.io/tls-profiles: "false"
+    features.operators.openshift.io/token-auth-aws: "false"
+    features.operators.openshift.io/token-auth-azure: "false"
+    features.operators.openshift.io/token-auth-gcp: "false"
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     operators.openshift.io/valid-subscription: '["Red Hat Process Automation Manager",
       "Red Hat Decision Manager"]'
@@ -20,7 +27,7 @@ metadata:
     operator-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: businessautomation-operator.7.13.5-1-dev-vlbwcmgjjd
+  name: businessautomation-operator.7.13.5-1-dev-75t5sm89zp
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -403,7 +410,7 @@ spec:
   - operator
   labels:
     alm-owner-businessautomation: businessautomation-operator
-    operated-by: businessautomation-operator.7.13.5-1-dev-vlbwcmgjjd
+    operated-by: businessautomation-operator.7.13.5-1-dev-75t5sm89zp
   links:
   - name: Product Page
     url: https://access.redhat.com/products/red-hat-process-automation-manager
@@ -419,5 +426,5 @@ spec:
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
-      operated-by: businessautomation-operator.7.13.5-1-dev-vlbwcmgjjd
-  version: 7.13.5-1+vlbwcmgjjd
+      operated-by: businessautomation-operator.7.13.5-1-dev-75t5sm89zp
+  version: 7.13.5-1+75t5sm89zp
