--- a/deploy/olm-catalog/prod/7.13.5-1/manifests/businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/prod/7.13.5-1/manifests/businessautomation-operator.clusterserviceversion.yaml
@@ -7,9 +7,16 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry.stage.redhat.io/rhpam-7/rhpam-rhel8-operator:7.13.5
-    createdAt: "2024-02-29 11:37:35"
+    createdAt: "2024-03-18 11:07:47"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat
       Decision Manager environments.
+    features.operators.openshift.io/disconnected: "false"
+    features.operators.openshift.io/fips-compliant: "false"
+    features.operators.openshift.io/proxy-aware: "false"
+    features.operators.openshift.io/tls-profiles: "false"
+    features.operators.openshift.io/token-auth-aws: "false"
+    features.operators.openshift.io/token-auth-azure: "false"
+    features.operators.openshift.io/token-auth-gcp: "false"
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     operators.openshift.io/valid-subscription: '["Red Hat Process Automation Manager",
       "Red Hat Decision Manager"]'
