[release-v7.13.x-blue-next][RHPAM-4904] Add required annotations for Infrastructure Feature Test

--- a/deploy/olm-catalog/dev/8.0.5-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/dev/8.0.5-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
@@ -7,9 +7,16 @@ metadata:
     categories: Integration & Delivery
     certified: "false"
     containerImage: quay.io/kiegroup/kie-cloud-operator:8.0.5
-    createdAt: "2024-03-01 18:08:07"
+    createdAt: "2024-03-19 13:12:19"
     description: Deploys and manages IBM Business Automation Manager Open Editions
       environment.
+    features.operators.openshift.io/disconnected: "false"
+    features.operators.openshift.io/fips-compliant: "false"
+    features.operators.openshift.io/proxy-aware: "false"
+    features.operators.openshift.io/tls-profiles: "false"
+    features.operators.openshift.io/token-auth-aws: "false"
+    features.operators.openshift.io/token-auth-azure: "false"
+    features.operators.openshift.io/token-auth-gcp: "false"
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     operators.openshift.io/valid-subscription: '["IBM Business Automation Manager
       Open Edition"]'
@@ -20,7 +27,7 @@ metadata:
     operator-bamoe-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: bamoe-businessautomation-operator.8.0.5-1-dev-jphg7wpnlq
+  name: bamoe-businessautomation-operator.8.0.5-1-dev-zsphhjcqrx
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -401,7 +408,7 @@ spec:
   - operator
   labels:
     alm-owner-bamoe-businessautomation: bamoe-businessautomation-operator
-    operated-by: bamoe-businessautomation-operator.8.0.5-1-dev-jphg7wpnlq
+    operated-by: bamoe-businessautomation-operator.8.0.5-1-dev-zsphhjcqrx
   links:
   - name: Product Page
     url: https://ibm.com
@@ -417,5 +424,5 @@ spec:
   selector:
     matchLabels:
       alm-owner-bamoe-businessautomation: bamoe-businessautomation-operator
-      operated-by: bamoe-businessautomation-operator.8.0.5-1-dev-jphg7wpnlq
-  version: 8.0.5-1+jphg7wpnlq
+      operated-by: bamoe-businessautomation-operator.8.0.5-1-dev-zsphhjcqrx
+  version: 8.0.5-1+zsphhjcqrx
