--- a/deploy/olm-catalog/prod/8.0.5-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/prod/8.0.5-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
@@ -7,9 +7,16 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry.stage.redhat.io/ibm-bamoe/bamoe-rhel8-operator:8.0.5
-    createdAt: "2024-03-01 18:08:07"
+    createdAt: "2024-03-19 13:12:19"
     description: Deploys and manages IBM Business Automation Manager Open Editions
       environment.
+    features.operators.openshift.io/disconnected: "false"
+    features.operators.openshift.io/fips-compliant: "false"
+    features.operators.openshift.io/proxy-aware: "false"
+    features.operators.openshift.io/tls-profiles: "false"
+    features.operators.openshift.io/token-auth-aws: "false"
+    features.operators.openshift.io/token-auth-azure: "false"
+    features.operators.openshift.io/token-auth-gcp: "false"
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     operators.openshift.io/valid-subscription: '["IBM Business Automation Manager
       Open Edition"]'
